添加redis数据库支持

--- a/.config.ini
+++ b/.config.ini
@@ -18,4 +18,10 @@ port = 465
 [http]
 httpmode = http
 hostname = localhost
-httpport = 443
+httpport = 80
+
+[redis]
+host = 127.0.0.1
+port = 6379
+db = 1
+expire = 300
